Refaktorisiere KraftlevelErmittlung